2.4.3

 *) Add a -min-server-life option to the FastCgiConfig and 
    FastCgiServer directives to provide better control of the 
    restart backoff feature.  Benjamin Osheroff [ben@gimbo.net]

2.4.2

 *) [WIN] Fix handle leaks in the process manager.  
    Sascha Schumann [sascha@schumann.cx]

 *) [WIN] Use a permanent pool for allocating the SystemRoot 
    environment variable.  Sakamoto [ringring@zb4.so-net.ne.jp]

 *) [WIN] Fix starting of scripts under AP2.

 *) Do the connect() to the application *after* collecting a chunk
    of client data.  This reinstates the pre-2.4.0 behaviour.
    James Jurach [muaddib@erf.net].

 *) Remove an assert that was triggering on WIN when spawn() failed.

 *) Provide the NO_SUEXEC_FOR_AP_USER_N_GROUP macro for building
    mod_fastcgi with the AP13 suexec behaviour (don't use suexec
    if httpd's user and group match that needed for the application).

 *) Prevent the use of all but the "auth" directives from being used
    anywhere but in global scope.  Prevent more than one instance
    of the FastCgiWrapper directive.

 *) Return NOT_FOUND (404) or FORBIDDEN (403) instead of 
    INTERNAL_SERVER_ERROR (500) when there are configuration issues
    or the script does't exist.  Suggested by Jeff Lawson [bovine@ud.com].

2.4.0

 *) [*nix Security] - When FastCgiWrapper (FastCgiSuexec) was in use 
    and a vhost configured to use the same uid/gid as the main
    server, mod_fastcgi would not bother using the wrapper (suexec)
    because its effective uid/gid was already appropriate.  This is
    consistent with Apache's v1.3 mod_cgi behaviour.  There are two
    problems with this approach:  1) when FastCgWrapper is in use 
    mod_fastcgi's process manager keeps its root privileges (as its
    real uid/gid) so it can terminate the applications its starts -
    this privilege was being passed to applications when the use of 
    the wrapper was bypassed  2) wrappers are often employed to